--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve-products": "json-server --watch db.json --port 3001"
+    "serve-products": "json-server --watch db.json --port 3001",
+    "addToCart":"node shoppingCart.js",
+    "unitTesting" :"npx jest cart.test.js"
   },
   "devDependencies": {
     "json-server": "^0.17.4"
